--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .wrap{
   max-width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
